src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Card Disputes</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Follow Up</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Review</fullName>
        </values>
        <values>
            <fullName>Re Opened</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Resolved for MCS</fullName>
        </values>
        <values>
            <fullName>Updated for MCS</fullName>
        </values>
        <values>
            <fullName>Waiting for a member</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Card Services</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Follow Up</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Review</fullName>
        </values>
        <values>
            <fullName>Re Opened</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Resolved for MCS</fullName>
        </values>
        <values>
            <fullName>Updated for MCS</fullName>
        </values>
        <values>
            <fullName>Waiting for a member</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Death Claims Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Follow Up</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Review</fullName>
        </values>
        <values>
            <fullName>Re Opened</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Resolved for MCS</fullName>
        </values>
        <values>
            <fullName>Updated for MCS</fullName>
        </values>
        <values>
            <fullName>Waiting for a member</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default EPS</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re Opened</fullName>
        </values>
        <values>
            <fullName>Resolved for MCS</fullName>
        </values>
        <values>
            <fullName>Updated for MCS</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Levies Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Review</fullName>
        </values>
        <values>
            <fullName>Re Opened</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Resolved for MCS</fullName>
        </values>
        <values>
            <fullName>Updated for MCS</fullName>
        </values>
        <values>
            <fullName>Waiting for a member</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Onboarding</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Follow Up</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Operation Services Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Review</fullName>
        </values>
        <values>
            <fullName>Re Opened</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Resolved for MCS</fullName>
        </values>
        <values>
            <fullName>Updated for MCS</fullName>
        </values>
        <values>
            <fullName>Waiting for a member</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Shared Branch Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Review</fullName>
        </values>
        <values>
            <fullName>Re Opened</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Resolved for MCS</fullName>
        </values>
        <values>
            <fullName>Updated for MCS</fullName>
        </values>
        <values>
            <fullName>Waiting for a member</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Shared Branching Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Review</fullName>
        </values>
        <values>
            <fullName>Re Opened</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Resolved for MCS</fullName>
        </values>
        <values>
            <fullName>Updated for MCS</fullName>
        </values>
        <values>
            <fullName>Waiting for a member</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>eBanking Check Holds</fullName>
        <description>eBanking Check Holds</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re Opened</fullName>
        </values>
        <values>
            <fullName>Resolved for MCS</fullName>
        </values>
        <values>
            <fullName>Updated for MCS</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Number</label>
        <referenceTo>Account_Details__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this button when you want to send additional documents apart from the pre-configured ones through DocuSign.</description>
        <label>Additional Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrandImage__c</fullName>
        <description>Brand image.  This formula uses the hardcoded url of the logo images in Production.  This allows us to automate the sandbox refresh process.</description>
        <formula>IF(Account_Number__r.Reference__c == &apos;BC02&apos;, 
     IMAGE(&quot;/resource/Logo_SpectrumCU&quot;,&quot;SpectrumCU&quot;, 35, 35 ),
     IMAGE(&quot;/resource/Logo_ChevronFCU&quot;,&quot;CFCU&quot;, 35, 35 )
)</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Abbreviation__c</fullName>
        <label>Brand Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <inlineHelpText>BC01 - Chevron Federal Credit Union
BC01 - Spectrum Credit Union</inlineHelpText>
        <label>Brand Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BC01</fullName>
                </value>
                <value>
                    <fullName>BC02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFCU</fullName>
                </value>
                <value>
                    <fullName>Spectrum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BrandfromAccount__c</fullName>
        <formula>IF(Account_Number__c != NULL,  Account_Number__r.Brand__c, &apos;Chevron&apos;)</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseComments__c</fullName>
        <label>CaseComments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Num__c</fullName>
        <description>Place holder for storing the case number without the leading zeros. Used by the process builder to assign a member portal case to the queue and send the member a confirmation email. This field is used in the body of the email.</description>
        <label>Case Num</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_type__c</fullName>
        <label>Case type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catagory__c</fullName>
        <description>Concatenation of primary, secondary and tertiary catagories</description>
        <formula>TEXT( Primary_Category__c ) + &quot; / &quot; + 
TEXT( Secondary_Category__c ) + 
IF(ISPICKVAL(Tertiary_Category__c, &quot;&quot;), NULL, &quot; / &quot;) +
TEXT( Tertiary_Category__c )</formula>
        <label>Catagory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Concatenation of primary, secondary and tertiary categories</description>
        <formula>TEXT( Primary_Category__c ) + &quot; / &quot; + 
TEXT( Secondary_Category__c ) + 
IF(ISPICKVAL(Tertiary_Category__c, &quot;&quot;), NULL, &quot; / &quot;) +
TEXT( Tertiary_Category__c )</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildActivitySeq__c</fullName>
        <defaultValue>1</defaultValue>
        <description>To track Last modified date on cause by other activities</description>
        <label>ChildActivitySeq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claimant_Email__c</fullName>
        <label>Claimant&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Claimant_First_Name__c</fullName>
        <label>Claimant First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claimant_Last_Name__c</fullName>
        <label>Claimant Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Number__c</fullName>
        <label>Code Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Unread_Comments__c</fullName>
        <description>The count of unread member comments</description>
        <inlineHelpText>The count of unread member comments</inlineHelpText>
        <label>Count Unread Comments</label>
        <summaryFilterItems>
            <field>Member_Comment__c.CU_Read__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Member_Comment__c.CU_Created__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Member_Comment__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Portal_Member__c</fullName>
        <formula>CONTAINS(CreatedBy.Profile.Name, &apos;Messaging center Customers&apos;)  || CONTAINS(CreatedBy.Profile.Name, &apos;CU Customer Community Login&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Secure Email Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Union_Name__c</fullName>
        <label>Credit Union Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_after_closed_date__c</fullName>
        <formula>TODAY() - DATEVALUE(ClosedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days after closed date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_elapsed__c</fullName>
        <formula>TODAY()- DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days elapsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Queue__c</fullName>
        <label>DocuSign Queue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Envelope_Status__c</fullName>
        <label>Docusign Envelope Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>E-mail Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_To__c</fullName>
        <label>Email To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_to_Send__c</fullName>
        <label>Email to Send</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EscalatedCase_Age__c</fullName>
        <formula>IF(IsEscalated , VALUE(TEXT((NOW()- CreatedDate )*24)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EscalatedCase Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five_Day_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Five Day Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlowTimeSet__c</fullName>
        <formula>if((NOW()- CreatedDate)*24*60*60 &gt; 10, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FlowTimeSet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Date__c</fullName>
        <label>Future Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HourPart__c</fullName>
        <formula>IF ( DATEVALUE(CreatedDate) &gt;= 
DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE(CreatedDate) &lt; 
DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7)) 
), 
Value(Mid(TEXT(CreatedDate- 7/24 ), 12,2)),
Value(Mid(TEXT(CreatedDate- 8/24 ), 12,2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HourPart</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Elapsed__c</fullName>
        <formula>(NOW() - CreatedDate) * (1440/60)</formula>
        <label>Hours Elapsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsMarkDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMarkDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMarkRead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMarkRead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMarkSaved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMarkSaved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTK__c</fullName>
        <label>Ticket #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Comment__c</fullName>
        <description>Displays the creation date of the newest member comment. This is used to identify cases that have recent communications with/from the member.</description>
        <label>Last Comment</label>
        <summarizedField>Member_Comment__c.CreatedDate</summarizedField>
        <summaryForeignKey>Member_Comment__c.Case__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Modified__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Update__c</fullName>
        <description>Provides the last update of a case from a user perspective and includes member comments that may be newer than the last case modification date/time.</description>
        <formula>IF(Last_Comment__c &gt; LastModifiedDate, Last_Comment__c, LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MaritzCX__ALG_Response_Id__c</fullName>
        <externalId>true</externalId>
        <label>ALG Survey Response Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaritzCX__ALG_Survey_Id__c</fullName>
        <externalId>true</externalId>
        <label>ALG Survey Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Alert_Rule_Criteria__c</fullName>
        <label>Alert Rule Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Respondent_Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Response_Deleted_From_MaritzCX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field keeps track of whether the response is available or deleted from the system.</description>
        <label>Response Deleted From MaritzCX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Response_View_Link__c</fullName>
        <formula>IF( MaritzCX__Response_Deleted_From_MaritzCX__c , $Label.maritzcx__deleted_response_message_formula , 
IF(  NOT(ISNULL(MaritzCX__ALG_Response_Id__c))  ,
HYPERLINK(
&quot;/apex/&quot;+
 $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c  + 
IF( ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c)  , &apos;&apos;,&apos;__&apos;) + 
&quot;ViewResponsePage?Id=&quot; + TEXT(MaritzCX__ALG_Response_Id__c),
&quot;View Response&quot;,
&quot;_blank&quot;
),&apos;&apos;))</formula>
        <label>View Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Survey_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>MaritzCX__Survey__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Survey_Response_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MaritzCX Survey Response</label>
        <referenceTo>MaritzCX__Survey_Response__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemberCommentCount__c</fullName>
        <label>MemberCommentCount</label>
        <summaryFilterItems>
            <field>Member_Comment__c.Draft__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Member_Comment__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_Nmbr__c</fullName>
        <formula>TEXT(VALUE(Account_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Nmbr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Num__c</fullName>
        <description>Place holder for storing the member number associated with a case.  Used by the process builder to assign a member portal case to the queu and send the member a confirmation email.  This field is used in the body of the email.</description>
        <label>Member Num</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <label>Member Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_account_created_date__c</fullName>
        <label>Membership account created date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Member_Comments__c</fullName>
        <description>Number of new / unread comments received from the member.</description>
        <inlineHelpText>Number of new / unread comments received from the member.</inlineHelpText>
        <label>New Member Comments</label>
        <summaryFilterItems>
            <field>Member_Comment__c.CU_Read__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Member_Comment__c.CU_Created__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Member_Comment__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <label>No of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Task_Count__c</fullName>
        <label>Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership_ID__c</fullName>
        <label>Ownership ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ownership Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Keep</fullName>
                </value>
                <value>
                    <fullName>Auto Assign</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Assign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <label>Previous Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <label>Primary Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Asset Recovery</fullName>
                </value>
                <value>
                    <fullName>Card Services</fullName>
                </value>
                <value>
                    <fullName>Consumer Lending</fullName>
                </value>
                <value>
                    <fullName>Disaster Relief</fullName>
                </value>
                <value>
                    <fullName>Hurricane Harvey Relief</fullName>
                </value>
                <value>
                    <fullName>Inquiries</fullName>
                </value>
                <value>
                    <fullName>Lending</fullName>
                </value>
                <value>
                    <fullName>Loan Servicing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Mobile Banking</fullName>
                </value>
                <value>
                    <fullName>Online Banking</fullName>
                </value>
                <value>
                    <fullName>Shared Branching</fullName>
                </value>
                <value>
                    <fullName>Vehicle Titling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Owned__c</fullName>
        <formula>ISBLANK(Owner:User.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recent_owner__c</fullName>
        <formula>IF( ISBLANK( Owner:Queue.DeveloperName) , Owner:User.LastName &amp; &quot; &quot; &amp; Owner:User.FirstName , Owner:Queue.DeveloperName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent_owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLATemp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLATemp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Breached__c</fullName>
        <description>Formula field so that the Escalated field can be re labled</description>
        <formula>If( IsEscalated==TRUE, IsEscalated, SLATemp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When checked, this case escalated due to an SLA breach.</inlineHelpText>
        <label>SLA Breached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <inlineHelpText>Escalation SLA in hours for a case.  SLA to initiate when the 3 categories are set and will be in effect until the case is closed.</inlineHelpText>
        <label>SLA (Business Hours)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Category__c</fullName>
        <label>Secondary Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A2A/P2P</fullName>
                </value>
                <value>
                    <fullName>A2A|P2P</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Access Mobile</fullName>
                </value>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Account Services</fullName>
                </value>
                <value>
                    <fullName>Address/Contact Updates</fullName>
                </value>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>ATM/Debit Cards</fullName>
                </value>
                <value>
                    <fullName>Bill_Pay</fullName>
                </value>
                <value>
                    <fullName>Bill Pay</fullName>
                </value>
                <value>
                    <fullName>Branch Research</fullName>
                </value>
                <value>
                    <fullName>California Fires</fullName>
                </value>
                <value>
                    <fullName>Call Center Research</fullName>
                </value>
                <value>
                    <fullName>Check By Phone</fullName>
                </value>
                <value>
                    <fullName>Checks</fullName>
                </value>
                <value>
                    <fullName>Check Withdrawal to Self</fullName>
                </value>
                <value>
                    <fullName>Check Withdrawal to Third Party</fullName>
                </value>
                <value>
                    <fullName>Close Account</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Consumer Loan</fullName>
                </value>
                <value>
                    <fullName>Consumer Loans</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Credit Card Payment</fullName>
                </value>
                <value>
                    <fullName>Death Claims</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>Deposits/Shares</fullName>
                </value>
                <value>
                    <fullName>DMV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secure_Email__c</fullName>
        <formula>IF(NULLVALUE(Account_Number__r.Parent_Account__c, &apos;&apos;) = &apos;&apos; , Account_Number__r.SecureEmailAddress__c , Account_Number__r.Parent_Account__r.SecureEmailAddress__c)</formula>
        <label>Secure_Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Account_Number__c</fullName>
        <label>Select Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>